Closed Bug 1634547 Opened 6 years ago Closed 6 years ago

Incorrect unscrolled clip for top layer items

Categories

(Core :: Web Painting, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: mstange, Assigned: mstange)

References

Details

Attachments

(1 file)

I added a clip to top layer items in the original scrolledClip changeset which gave the items a clip to the dirtyRect. Matt then (correctly) changed this clip to be for the visibleRect, in bug 1411411.

However, I do not recall why I thought this clip was necessary. Moreover, the clip is associated with the wrong ASR: The only way this clip would make sense was if moved with the item. But it is set before we set the current ASR to the item's ASR, so it acts as a fixed clip. For scrolled top layer items (such as the dialog element, bug 1322939), this clip is just wrong.

Removing this clip doesn't seem to break anything, so I think we should just do that.

Pushed by mstange@themasta.com: https://hg.mozilla.org/integration/autoland/rev/3396f5c4a0bc Remove an unnecessary (and sometimes incorrect) clip. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: