Bug 1634547 - Remove an unnecessary (and sometimes incorrect) clip. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D73346